update end state

--- a/04_03_e.ipynb
+++ b/04_03_e.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
      "execution_count": 1,
@@ -32,7 +32,7 @@
     "from dotenv import load_dotenv\n",
     "\n",
     "\n",
-    "load_dotenv() # load environment variables from .env file"
+    "load_dotenv(override=True) # load environment variables from .env file"
    ]
   },
   {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "98b763fb-aa90-4778-b9b4-436d263d61b1",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b3264892-982d-4434-b6ef-e27333c8feda",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
     "    system_message=\"You are a helpful AI assistant. \"\n",
     "    \"You can help with simple calculations. \"\n",
     "    \"Return 'TERMINATE' when the task is done.\",\n",
-    "    llm_config={\"config_list\": [{\"model\": \"gpt-4\", \"api_key\": os.environ[\"OPENAI_API_KEY\"]}]},\n",
+    "    llm_config=llm_config\n",
     ")"
    ]
   },
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "29d18df8-ba43-4d50-af12-f06acf78aa0e",
    "metadata": {},
    "outputs": [],
@@ -141,10 +141,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "717eb35f-0611-4b3f-898b-f74af021360c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.calculator(a: int, b: int, operator: Annotated[Literal['+', '-', '*', '/'], 'operator']) -> int>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Register the tool signature with the assistant agent.\n",
     "assistant.register_for_llm(name=\"calculator\", description=\"A simple calculator\")(calculator)\n",
@@ -163,10 +174,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9f0281e5-1b7b-45dc-9738-49b6a6209ee0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/harshit/lil/building-ai-agents-with-autogen-3918551/.autogen_env/lib/python3.12/site-packages/autogen/agentchat/conversable_agent.py:2558: UserWarning: Function 'calculator' is being overridden.\n",
+      "  warnings.warn(f\"Function '{tool_sig['function']['name']}' is being overridden.\", UserWarning)\n",
+      "/Users/harshit/lil/building-ai-agents-with-autogen-3918551/.autogen_env/lib/python3.12/site-packages/autogen/agentchat/conversable_agent.py:2477: UserWarning: Function 'calculator' is being overridden.\n",
+      "  warnings.warn(f\"Function '{name}' is being overridden.\", UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "from autogen import register_function\n",
     "\n",
@@ -190,13 +212,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "563249ca-c861-44d4-95f2-72b55905a7a9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mUser\u001b[0m (to Assistant):\n",
+      "\n",
+      "What is (44232 + 13312 / (232 - 32)) * 5?\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "\u001b[31m\n",
+      ">>>>>>>> USING AUTO REPLY...\u001b[0m\n",
+      "\u001b[33mAssistant\u001b[0m (to User):\n",
+      "\n",
+      "\u001b[32m***** Suggested tool call (call_uUZNW7sHUTvY9Iq5Z9vZ6SAN): calculator *****\u001b[0m\n",
+      "Arguments: \n",
+      "{\"a\":232,\"b\":32,\"operator\":\"-\"}\n",
+      "\u001b[32m***************************************************************************\u001b[0m\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "\u001b[35m\n",
+      ">>>>>>>> EXECUTING FUNCTION calculator...\u001b[0m\n",
+      "\u001b[33mUser\u001b[0m (to Assistant):\n",
+      "\n",
+      "\u001b[33mUser\u001b[0m (to Assistant):\n",
+      "\n",
+      "\u001b[32m***** Response from calling tool (call_uUZNW7sHUTvY9Iq5Z9vZ6SAN) *****\u001b[0m\n",
+      "200\n",
+      "\u001b[32m**********************************************************************\u001b[0m\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "\u001b[31m\n",
+      ">>>>>>>> USING AUTO REPLY...\u001b[0m\n",
+      "\u001b[33mAssistant\u001b[0m (to User):\n",
+      "\n",
+      "\u001b[32m***** Suggested tool call (call_YrYOCTnjfnXvD4OTZ90k7UDn): calculator *****\u001b[0m\n",
+      "Arguments: \n",
+      "{\"a\":13312,\"b\":200,\"operator\":\"/\"}\n",
+      "\u001b[32m***************************************************************************\u001b[0m\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "\u001b[35m\n",
+      ">>>>>>>> EXECUTING FUNCTION calculator...\u001b[0m\n",
+      "\u001b[33mUser\u001b[0m (to Assistant):\n",
+      "\n",
+      "\u001b[33mUser\u001b[0m (to Assistant):\n",
+      "\n",
+      "\u001b[32m***** Response from calling tool (call_YrYOCTnjfnXvD4OTZ90k7UDn) *****\u001b[0m\n",
+      "66\n",
+      "\u001b[32m**********************************************************************\u001b[0m\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "\u001b[31m\n",
+      ">>>>>>>> USING AUTO REPLY...\u001b[0m\n",
+      "\u001b[33mAssistant\u001b[0m (to User):\n",
+      "\n",
+      "\u001b[32m***** Suggested tool call (call_373I1ry9ffvTkrfPedi13auB): calculator *****\u001b[0m\n",
+      "Arguments: \n",
+      "{\"a\":44232,\"b\":66,\"operator\":\"+\"}\n",
+      "\u001b[32m***************************************************************************\u001b[0m\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "\u001b[35m\n",
+      ">>>>>>>> EXECUTING FUNCTION calculator...\u001b[0m\n",
+      "\u001b[33mUser\u001b[0m (to Assistant):\n",
+      "\n",
+      "\u001b[33mUser\u001b[0m (to Assistant):\n",
+      "\n",
+      "\u001b[32m***** Response from calling tool (call_373I1ry9ffvTkrfPedi13auB) *****\u001b[0m\n",
+      "44298\n",
+      "\u001b[32m**********************************************************************\u001b[0m\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "\u001b[31m\n",
+      ">>>>>>>> USING AUTO REPLY...\u001b[0m\n",
+      "\u001b[33mAssistant\u001b[0m (to User):\n",
+      "\n",
+      "\u001b[32m***** Suggested tool call (call_kYPPCWrSnDRXsyGoiGaXbT0l): calculator *****\u001b[0m\n",
+      "Arguments: \n",
+      "{\"a\":44298,\"b\":5,\"operator\":\"*\"}\n",
+      "\u001b[32m***************************************************************************\u001b[0m\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "\u001b[35m\n",
+      ">>>>>>>> EXECUTING FUNCTION calculator...\u001b[0m\n",
+      "\u001b[33mUser\u001b[0m (to Assistant):\n",
+      "\n",
+      "\u001b[33mUser\u001b[0m (to Assistant):\n",
+      "\n",
+      "\u001b[32m***** Response from calling tool (call_kYPPCWrSnDRXsyGoiGaXbT0l) *****\u001b[0m\n",
+      "221490\n",
+      "\u001b[32m**********************************************************************\u001b[0m\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "\u001b[31m\n",
+      ">>>>>>>> USING AUTO REPLY...\u001b[0m\n",
+      "\u001b[33mAssistant\u001b[0m (to User):\n",
+      "\n",
+      "The result of the expression \\((44232 + \\frac{13312}{232 - 32}) \\times 5\\) is 221490.\n",
+      "\n",
+      "TERMINATE\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "chat_result = user_proxy.initiate_chat(assistant, message=\"What is (44232 + 13312 / (232 - 32)) * 5?\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00627e2e-4b07-47d7-81e2-de92cdf7ed80",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -215,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
