--- a/05_02_e.ipynb
+++ b/05_02_e.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "d9712cce-d65c-406c-ba4d-67f4315d43f5",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,12 +33,12 @@
     "from dotenv import load_dotenv\n",
     "\n",
     "\n",
-    "load_dotenv() # load environment variables from .env file"
+    "load_dotenv(override=True) # load environment variables from .env file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "b6d31702-1b73-4191-9c0c-32e7728b7968",
    "metadata": {},
    "outputs": [],
@@ -52,6 +52,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1c415244-9d55-44ac-bffa-da0d43e474b6",
+   "metadata": {},
+   "source": [
+    "## Create an executor instance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "811bfee8-db2d-41e8-9513-413b6ada50bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "executor = LocalCommandLineCodeExecutor(\n",
+    "    timeout=10,\n",
+    "    work_dir=\"coding\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7e8a6b77-b67c-44b3-8d6e-dc8af7314242",
    "metadata": {},
    "source": [
@@ -60,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "563249ca-c861-44d4-95f2-72b55905a7a9",
    "metadata": {},
    "outputs": [],
@@ -78,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "57fac5fc-f644-45e8-8a5d-147eeb22fcd8",
    "metadata": {},
    "outputs": [],
@@ -94,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b0f7635b-2e9c-448d-8f77-ad173226d881",
    "metadata": {},
    "outputs": [],
@@ -104,10 +125,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4b2fdd72-b886-4b48-9042-51353d406d23",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'You are a helpful AI assistant.\\nSolve tasks using your coding and language skills.\\nIn the following cases, suggest python code (in a python coding block) or shell script (in a sh coding block) for the user to execute.\\n    1. When you need to collect info, use the code to output the info you need, for example, browse or search the web, download/read a file, print the content of a webpage or a file, get the current date/time, check the operating system. After sufficient info is printed and the task is ready to be solved based on your language skill, you can solve the task by yourself.\\n    2. When you need to perform some task with code, use the code to perform the task and output the result. Finish the task smartly.\\nSolve the task step by step if you need to. If a plan is not provided, explain your plan first. Be clear which step uses code, and which step uses your language skill.\\nWhen using code, you must indicate the script type in the code block. The user cannot provide any other feedback or perform any other action beyond executing the code you suggest. The user can\\'t modify your code. So do not suggest incomplete code which requires users to modify. Don\\'t use a code block if it\\'s not intended to be executed by the user.\\nIf you want the user to save the code in a file before executing it, put # filename: <filename> inside the code block as the first line. Don\\'t include multiple code blocks in one response. Do not ask users to copy and paste the result. Instead, use \\'print\\' function for the output when relevant. Check the execution result returned by the user.\\nIf the result indicates there is an error, fix the error and output the code again. Suggest the full code instead of partial code or code changes. If the error can\\'t be fixed or if the task is not solved even after the code is executed successfully, analyze the problem, revisit your assumption, collect additional info you need, and think of a different approach to try.\\nWhen you find an answer, verify the answer carefully. Include verifiable evidence in your response if possible.\\nReply \"TERMINATE\" in the end when everything is done.\\n    '"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "code_writer_agent_system_message"
    ]
@@ -137,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
