update end states

--- a/07_01_e.ipynb
+++ b/07_01_e.ipynb
@@ -5,17 +5,7 @@
    "id": "ce5aa41a-0274-4af2-a5c5-efea984b590f",
    "metadata": {},
    "source": [
-    "# Building a data analysis company with Group Chat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f44ef9df-79c1-42af-9d20-225c032db422",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "! pip install \"pyautogen[teachable]\""
+    "# Building a applied research lab with Group Chat"
    ]
   },
   {
@@ -27,10 +17,11 @@
    "source": [
     "## import required libraries\n",
     "import os\n",
-    "from autogen import UserProxyAgent\n",
-    "from autogen import ConversableAgent  # As an example\n",
+    "from autogen import UserProxyAgent, AssistantAgent, GroupChat, GroupChatManager\n",
+    "from autogen import ConversableAgent\n",
+    "from dotenv import load_dotenv\n",
     "\n",
-    "load_dotenv() # load environment variables from .env file"
+    "load_dotenv(override=True) # load environment variables from .env file"
    ]
   },
   {
@@ -62,8 +53,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "task = \"Write a detailed weather analysis report for New York City \"\\\n",
-    "\"over the past week. Today's date is 2024-04-23.\""
+    "task = \"\"\"Write a detailed weather analysis report for New York City\n",
+    "          over the past week. Today's date is 2024-08-23Let's "
    ]
   },
   {
@@ -90,12 +81,11 @@
    "outputs": [],
    "source": [
     "## user or admin agent\n",
-    "user_proxy = autogen.ConversableAgent(\n",
+    "user_proxy = UserProxyAgent(\n",
     "    name=\"Admin\",\n",
-    "    system_message=\"Give the task, and send \"\n",
-    "    \"instructions to writer to refine the weather analysis report.\",\n",
+    "    system_message=\"A human admin. Interact with the planner to discuss the plan. Plan execution needs to be approved by this admin.\",\n",
     "    code_execution_config=False,\n",
-    "    llm_config=llm_config,\n",
+    "    lm_config=llm_config,\n",
     "    human_input_mode=\"ALWAYS\",\n",
     ")"
    ]
@@ -107,22 +97,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## planner agent\n",
-    "planner = autogen.ConversableAgent(\n",
+    "planner = autogen.AssistantAgent(\n",
     "    name=\"Planner\",\n",
-    "    system_message=\"Given a task, please determine \"\n",
-    "    \"what weather information is needed to complete the task. \"\n",
-    "    \"Please note that the information will all be retrieved using\"\n",
-    "    \" Python code. Please only suggest information that can be \"\n",
-    "    \"retrieved using Python code. \"\n",
-    "    \"After each step is done by others, check the progress and \"\n",
-    "    \"instruct the remaining steps. If a step fails, try to \"\n",
-    "    \"workaround\",\n",
-    "    description=\"Planner. Given a task, determine what \"\n",
-    "    \"weather information is needed to complete the task. \"\n",
-    "    \"After each step is done by others, check the progress and \"\n",
-    "    \"instruct the remaining steps\",\n",
-    "    llm_config=llm_config,\n",
+    "    system_message=\"\"\"Planner. Suggest a plan. Revise the plan based on feedback from admin and critic, until admin approval.\n",
+    "            The plan may involve an engineer who can write code and a scientist who doesn't write code.\n",
+    "            Explain the plan first. Be clear which step is performed by an engineer, and which step is performed by a scientist.\n",
+    "            \"\"\",\n",
+    "    llm_config=llm_config\n",
     ")"
    ]
   },
@@ -134,11 +115,21 @@
    "outputs": [],
    "source": [
     "## engineer agent\n",
-    "engineer = autogen.AssistantAgent(\n",
+    "engineer = AssistantAgent(\n",
     "    name=\"Engineer\",\n",
-    "    llm_config=llm_config,\n",
-    "    description=\"An engineer that writes code to fetch and analyze weather data \"\n",
-    "    \"based on the plan provided by the planner.\",\n",
+    "    llm_config=gpt4_config,\n",
+    "    system_message=\"\"\"Engineer. You follow an approved plan. You write python/shell code to solve tasks. \n",
+    "    Wrap the code in a code block that specifies the script type. The user can't modify your code. \n",
+    "    So do not suggest incomplete code which requires others to modify. \n",
+    "    Don't use a code block if it's not intended to be executed by the executor.\n",
+    "    Don't include multiple code blocks in one response. \n",
+    "    Do not ask others to copy and paste the result. \n",
+    "    Check the execution result returned by the executor.\n",
+    "    If the result indicates there is an error, fix the error and output the code again. \n",
+    "    Suggest the full code instead of partial code or code changes. \n",
+    "    If the error can't be fixed or if the task is not solved even after the code is executed successfully, \n",
+    "    analyze the problem, revisit your assumption, collect additional info you need, and think of a different approach to try.\n",
+    "    \"\"\",\n",
     ")"
    ]
   },
@@ -150,14 +141,13 @@
    "outputs": [],
    "source": [
     "## executor agent\n",
-    "executor = autogen.ConversableAgent(\n",
+    "executor = autogen.UserProxyAgent(\n",
     "    name=\"Executor\",\n",
-    "    system_message=\"Execute the code written by the \"\n",
-    "    \"engineer and report the weather data results.\",\n",
+    "    system_message=\"Executor. Execute the code written by the engineer and report the result.\",\n",
     "    human_input_mode=\"NEVER\",\n",
     "    code_execution_config={\n",
     "        \"last_n_messages\": 3,\n",
-    "        \"work_dir\": \"coding\",\n",
+    "        \"work_dir\": \"paper\",\n",
     "        \"use_docker\": False,\n",
     "    },\n",
     ")"
@@ -170,17 +160,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## writer agent\n",
-    "writer = autogen.ConversableAgent(\n",
-    "    name=\"Writer\",\n",
-    "    llm_config=llm_config,\n",
-    "    system_message=\"Weather Report Writer. \"\n",
-    "    \"Please write weather analysis reports in markdown format (with relevant titles)\"\n",
-    "    \" and put the content in pseudo ```md``` code block. \"\n",
-    "    \"You take feedback from the admin and refine your report.\",\n",
-    "    description=\"Writer. \"\n",
-    "    \"Write weather analysis reports based on the code execution results and take \"\n",
-    "    \"feedback from the admin to refine the report.\"\n",
+    "## scientist agent\n",
+    "scientist_writer = autogen.AssistantAgent(\n",
+    "    name=\"Scientist/Writer\",\n",
+    "    llm_config=gpt4_config,\n",
+    "    system_message=\"\"\"Scientist/Writer. \n",
+    "    You follow an approved plan. \n",
+    "    Your role is to analyze and summarize research papers collected by the engineer. \n",
+    "    You provide scientific expertise, interpret results, and write comprehensive summaries and analyses. \n",
+    "    You can also suggest areas for further research or data collection.\"\"\",\n",
     ")"
    ]
   },
@@ -233,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
